--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,99 @@
-*{
-padding:0;
-  margin:0;
-  box-sizing:border-box
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: system-ui, sans-serif;
+  color: #13181a;
+
+  display: flex;
+  flex-direction: column;
+  min-height: 100dvh;
+}
+
+.main-title {
+  position: relative;
+  margin-bottom: 10px;
+  font-size: 22px;
+
+  &::before {
+    --width: 10px;
+
+    content: "";
+    display: inline-block;
+    margin-inline-end: 8px;
+    margin-bottom: 2px;
+    width: var(--width);
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+    background-color: rgb(36, 82, 209);
+  }
+}
+
+.container {
+  padding-inline: 15px;
+  margin-inline: auto;
+  width: 100%;
+}
+
+@media (min-width: 767px) {
+  .container {
+    width: 95%;
+  }
+}
+
+@media (min-width: 1140px) {
+  .container {
+    max-width: 1140px;
+  }
+}
+
+:is(.header, .footer) {
+  background-color: whitesmoke;
+  padding-block: 10px;
+}
+
+.header h1 {
+  text-align: center;
+  font-size: 25px;
+}
+
+main {
+  margin-block: 20px;
+}
+
+main section {
+  margin-block-end: 25px;
+}
+
+article {
+  margin-bottom: 15px;
+}
+
+article h3 {
+  font-weight: 600;
+  font-size: 17px;
+}
+
+article p {
+  line-height: 1.5;
+}
+
+article .author {
+  margin-block: 4px 5px;
+
+  span {
+    margin-left: 2px;
+  }
+}
+
+.footer {
+  margin-top: auto;
+}
+
+.footer p {
+  text-align: center;
+  font-weight: 500;
 }
